...
                navController.navigate("home") {
                    popUpTo("signIn") { inclusive = true }
                }
            }

            is LoginScreenViewModel.LoginState.Error -> {
                errorMessage = "Incorrect Email or Password!"
                delay(2000)
                viewModel.resetState()
            }

            else -> {}
        }
...

        AuthTextField(
            placeholderText = "abc@email.com",
            iconResId = R.drawable.mail,
            value = email,
            password = false,
            modifier = Modifier.testTag("emailField"),
            onValueChange = {
                email = it
                errorMessage = null
            }
        )

...

        AuthTextField(
            placeholderText = "Your Password",
            iconResId = R.drawable.lock,
            value = password,
            password = true,
            modifier = Modifier.testTag("passwordField"),
            onValueChange = {
                password = it
                errorMessage = null
            }
        )

...
            )
        }

        Spacer(modifier = Modifier.height(40.dp))

        AuthConfirmButton(
            modifier = Modifier.testTag("loginButton"),
            text = "Sign in",
            state = buttonState,
            onClick = {
                when {
                    email.isBlank() || password.isBlank() -> {
                        errorMessage = "Campos obrigatórios"
                    }
                    password.length < 8 -> {
                        errorMessage = "A password deve ter pelo menos 8 caracteres"
                    }
                    else -> {
                        errorMessage = null
                        viewModel.resetState()
                        viewModel.login(email, password)
                    }
...
