...

    Card(
        colors = CardDefaults.cardColors(containerColor = Color.White),
        shape = RoundedCornerShape(16.dp),
        modifier = modifier
            .fillMaxWidth()
            .height(260.dp).testTag("event_card"),
        elevation = CardDefaults.cardElevation(defaultElevation = 2.dp),
        onClick = {
            val eventJson = Uri.encode(Gson().toJson(event))
            navController.navigate("eventDetails/$eventJson")
        }
    ) {
...
