...
                    viewModel.createTicket(eventDetails.eventID)
                    navigateToPayment = true
                },
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(horizontal = 25.dp, vertical = 20.dp)
                    .testTag("buy_ticket_button"),
                colors = ButtonDefaults.buttonColors(containerColor = EventionBlue),
                shape = RoundedCornerShape(8.dp),
            ) {
                Text(
                    text = "BUY TICKET ${event.price}€",
                    style = MaterialTheme.typography.labelLarge,
...
