...
    }

    // logica mensagens
    LaunchedEffect(createEventState) {
        when (val state = createEventState) {
            is CreateEventState.Success -> {
                messageText.value = "Event created successfully!"
                isSuccessMessage.value = true
                showMessage.value = true

                delay(3000)
                showMessage.value = false

...
                            showDatePicker.value = false
                        }
                    }

                    Spacer(modifier = Modifier.height(4.dp))

                    CustomCreateEventTextField("Event Name", eventName.value, description = false) {
                        eventName.value = it
                    }

                    CustomCreateEventTextField("Description", eventDescription.value, description = true) {
                        eventDescription.value = it
                    }

                    LocationSelectorField(
                        labelText = "Event Location",
                        selectedLocation = selectedLocation.value,
                        displayAddress = addressText.value,
                        onClick = { navController.navigate("selectLocation") }
                    )

                    CustomCreateEventTextField("Price", eventPrice.value, isPrice = true) {
                        eventPrice.value = it
                    }

                    Spacer(modifier = Modifier.height(30.dp))

                    Button(
...
                            val end = endDate
                            val location = LatLng(38.7169, -9.1399)

                            if (name.isNotBlank() && description.isNotBlank() && start != null && end != null && location != null && price != null) {
                                viewModel.createEvent(name, description, start, end, price, location, context)
                            } else {
                                messageText.value = "Incorrect fields"
                                isSuccessMessage.value = false
                                showMessage.value = true
                            }

                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(48.dp)
                            .testTag("createEventButton"),
                        shape = RoundedCornerShape(12.dp),
                        colors = ButtonDefaults.buttonColors(containerColor = EventionBlue)
                    ) {
                        if (createEventState is CreateEventState.Loading) {
                            CircularProgressIndicator(
                                color = Color.White,
...
