...
            if(isConnected){
                Box(
                    modifier = Modifier
                        .fillMaxWidth()
                        .weight(1.3f)
                        .background(Color.Gray)
                        .testTag("GoogleMap"),
                ) {
                    GoogleMap(
                        modifier = Modifier.fillMaxSize(),
                        cameraPositionState = cameraPositionState
                    ) {
                        events.forEach { event ->
...
                        }
                        IconButton(onClick = {
                            moveToCurrentLocation(context, cameraPositionState)
                        }) {
                            Icon(
                                imageVector = Icons.Outlined.LocationOn,
                                contentDescription = "My Location Button",
                                tint = Color.Gray,
                                modifier = Modifier.testTag("find_search")
                            )
                        }
                    }
                }
...
